@@ -2,5 +2,5 @@
 
 psycopg=dict(connectArgs=dict(dsn='user=pydotest dbname=pydotest host=localhost'))
 sqlite=dict(connectArgs=dict(database='/tmp/pydotest_sqlite.db'))
-sqlite2=dict(connectArgs=dict(database='/tmp/pydotest_sqlite2.db'))
+sqlite2=dict(connectArgs=dict(database=':memory:'))
 mysql=dict(connectArgs=dict(db='pydotest', user='pydotest'))
